# bitset

./: Cargo.toml  README.md
benches/: array_speed.rs
benches/report/Bits/array_bits/base/: benchmark.json  sample.json
benches/report/Bits/array_bits/new/: estimates.json  raw.csv  tukey.json
benches/report/Bits/array_bits/report/: index.html
benches/report/Bits/array_bits_inline/base/: benchmark.json  sample.json  tukey.json
benches/report/Bits/array_bits_inline/new/: estimates.json  raw.csv
benches/report/Bits/array_bits_inline/report/: index.html
benches/report/Bits/report/: index.html
benches/report/Bits/simple_bits/base/: estimates.json  raw.csv  sample.json
benches/report/Bits/simple_bits/new/: benchmark.json  tukey.json
benches/report/Bits/simple_bits/report/: index.html
benches/report/Bits/simple_bits_inline/base/: benchmark.json  estimates.json  tukey.json
benches/report/Bits/simple_bits_inline/new/: raw.csv  sample.json
benches/report/Bits/simple_bits_inline/report/: index.html
benches/report/Bits/vector_bits/base/: estimates.json
benches/report/Bits/vector_bits/new/: benchmark.json  raw.csv  sample.json  tukey.json
benches/report/Bits/vector_bits/report/: index.html
benches/report/Bits/vector_bits_inline/base/: benchmark.json  raw.csv  tukey.json
benches/report/Bits/vector_bits_inline/new/: estimates.json  sample.json
benches/report/Bits/vector_bits_inline/report/: index.html
benches/report/report/: index.html
src/: bitset.rs  lib.rs  traits.rs
