[package]
name = "bitset"
version = "0.1.0"
authors = ["Szymon Lipiński <mabewlun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num="0.3.0"

[dev-dependencies]
criterion = "0.3.3"
quickcheck_macros = "0.9.1"
quickcheck = "0.9.2"

[[bench]]
name = "array_speed"
harness = false
